<resources>
    <string name="app_name">Implicit_Intent</string>
    <string name="implicit_intention">Implicit intention</string>

    <string name="edittext_uri">https://developer.android.com</string>
    <string name="button_uri">Open Website</string>

    <string name="edittext_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>

    <string name="edittext_share">\'Twas brillig and the slithy toves</string>
    <string name="button_share">Share This Text</string>
</resources>